@@ -1,69 +1,47 @@
-# ServiceMonitor
+> :arrow_upper_right: This README only covers one section of the demo.
+> The [master branch](../../tree/master) contains more information.
 
-An example application for my book [_The Java Module System_](https://www.manning.com/books/the-java-module-system?a_aid=nipa&a_bid=869915cb).
-The _Service Monitor_ is an application that observes a hypothetical network of microservices by
+# Services
 
-* contacting individual services (not really, it just makes up data)
-* collecting and aggregating diagnostic data into statistics
-* persisting statistics
-* making statistics available via REST
+Services follow the [service locator pattern](https://en.wikipedia.org/wiki/Service_locator_pattern) and decouple the user of an API from its implementors.
 
-It is split into a number of modules that focus on specific concerns.
-Each module has its own directory that contains the known folder structure, e.g. `src/main/java`.
+In this example the _monitor_ module declares that it uses the `ServiceObserverFactory` as a service:
 
+```java
+module monitor {
+	requires monitor.observer;
+	// no more requires on alpha and beta observer modules!
+	requires monitor.statistics;
+	requires monitor.persistence;
+	requires monitor.rest;
 
-## Branches
-
-The master branch uses basic features, except where it has to use automatic and unnamed modules for the non-modularized dependencies (Spark, Hibernate).
-Other branches explore individual features of the module system:
-
-* [services](../../tree/feature-services) aka `provides ... with` and `uses`
-* [implied readability](../../tree/feature-implied-readability) aka `requires transitive`
-* [optional dependencies](../../tree/feature-optional-dependencies) aka `requires static`
-* [qualified exports](../../tree/feature-qualified-exports) aka `exports to`
-* [image creation with `jlink`](../../tree/feature-jlink)
-* [layers](../../tree/feature-layers)
-
-The [branch `features-combined`](../../tree/features-combined) combines many of those into a final version of the application.
-
-Then there are some branches that explore how things can break:
-
-* [duplicate modules](../../tree/break-duplicate-modules-even-if-unrequired)
-* [missing transitive dependency](../../tree/break-missing-transitive-dependency)
-* [reflection over internals](../../tree/break-reflection-over-internals)
-* split package, on [compilation](../../tree/break-split-package-compilation) and [launch](../../tree/break-split-package-launch)
-
-
-## Setup
-
-This demo was developed against JDK 9.0.4.
-The command line scripts for shell and batch use the default commands `javac`, `jar`, and `java`.
-If these commands don't refer to the Java 9 version on your system, you can enter the appropriate paths at the top of each script.
-
-This is a multi-module Maven project, which your IDE should be able to import. If you're using Maven directly, make sure you have 3.5.0 or higher.
-
-
-## Build and Execution
-
-This being a Maven project means you can build and run with with Maven, but to really see how the module system works, I recommend to use the scripts.
-
-### Maven
-
-To build and run with Maven execute the following in the project's root:
-
-```
-mvn clean install
-mvn exec:exec -pl .
+	uses ServiceObserverFactory;
+}
 ```
 
-Unfortunately, Jetty doesn't come up due to a `NoClassDefFoundError` (of `org.eclipse.jetty.http.pathmap.PathSpec`).
-Need to inspect that...
+Now _monitor.observer.alpha_ and _monitor.observer.beta_ declare that they provide that service:
 
-### Scripts
+```java
+module monitor.observer.alpha {
+	requires monitor.observer;
+	// no exports needed; API is well-encapsulated!
+	provides monitor.observer.ServiceObserverFactory
+		with monitor.observer.alpha.AlphaServiceObserverFactory;
+}
+```
 
-The root directory contains a number of Windows batch and Linux shell scripts:
+And that's it from the module declaration side.
+The code in _monitor_ loading those service looks as follows:
 
-* `compile`: compiles the modules one by one
-* `multi-compile`: compiles all modules at once
-* `dry-run`: launches the application with `--dry-run`, which aborts before calling the main method
-* `run`: launches the application
+```java
+List<ServiceObserverFactory> observerFactories = ServiceLoader
+		.load(ServiceObserverFactory.class).stream()
+		.map(Provider::get)
+		.collect(toList());
+```
+
+When it comes to building and executing these modules, the fact that there is no longer a dependency from _monitor_ to the observer implementations may complicate matters:
+
+* The multi-compilation build needs `--add-modules=monitor.observer.alpha,monitor.observer.beta` to include them.
+* Maven builds them correctly as long as the parent POM mentions them, but without that dependency the `exec` plugin doesn't put the implementations on the module path when launching the app.
+  This is less of a problem in this particular configuration, because `exec` is executed in the parent POM (instead of the module with the executable, which is more common).
